<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_pattern2"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/imageHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/sauceImage"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_marginTop="5dp" />

            </LinearLayout>


            <ImageView
                android:src="@drawable/favorite_inactive"
                android:id="@+id/favouriteButtonDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="15dp"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:gravity="left">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/sauceType"
                        android:layout_width="25dp"
                        android:layout_height="25dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/sauceNameDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="6dp"
                android:background="@drawable/comment_bubble_inactive"
                android:gravity="right">

                <TextView
                    android:id="@+id/commentButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="3dp"
                    android:gravity="center_vertical"
                    android:textSize="15dp" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="10dp"
            android:background="@color/black"></View>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="4dp"
            android:background="@color/black"></View>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sauceIngredient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/sauce_ingredients"
                    android:textSize="12dp" />


                <TextView
                    android:id="@+id/saucePreparation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/sauce_preparation"
                    android:textSize="12dp" />


            </LinearLayout>

        </ScrollView>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_weight="0.1"
        android:background="@color/like_dislike_tab_color"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/dontLikeButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/badButton"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_bad_big_inactive" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/dont_like_it"
                android:textSize="15dp" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/bright_black"></View>

        <LinearLayout
            android:id="@+id/likeItButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/goodButton"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_good_big_inactive" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/like_it"
                android:textSize="15dp" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>